# swa-verify

./: Cargo.toml  README.md  generate_certs.sh
benchmark-receiver/: Cargo.toml  build.rs
benchmark-receiver/src/: main.rs
benchmark-sender/: Cargo.toml  build.rs
benchmark-sender/src/: main.rs
certs/: ca.crt  ca.key  ca.srl  server.crt  server.key
proto/: benchmark.proto
verify1/: Cargo.toml
verify1/receiver/: Cargo.toml  scenario.proto
verify1/receiver/src/: main.rs
verify1/sender/: Cargo.toml  build.rs
verify1/sender/src/: main.rs
verify2/: Cargo.toml
verify2/etcdtester/: Cargo.toml
verify2/etcdtester/src/: main.rs
verify2/etcdwatcher/: Cargo.toml
verify2/etcdwatcher/src/: main.rs
